--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>サンプル</title>
+    <title>株式会社金子電設</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="main">
       <div class="container">
-        <h1>株式会社</h1>
-        <p>ここからオリジナルのWebページを作成していきましょう！</p>
+        <h1>株式会社金子電設</h1>
+        <p>電気で世の中をあたたかく</p>
       </div>
     </div>
   </body>
